# Mai-Invoice-Generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
mai-fastapi/: database.py  main.py  models.py  schema.py
mai-invoice-generator/: models.py
mai-invoice-generator/routers/: invoices.py
