[tool.poetry]
name = "mai-fastapi"
version = "0.1.0"
description = "test project"
authors = ["Admin <admin@mailinh.cc>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
