[tool.poetry]
name = "mai-invoice-generator"
version = "0.1.0"
description = "generate invoices"
authors = ["Admin <admin@mailinh.cc>"]
license = "Apache License 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
sqlalchemy = "^2.0.27"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.isort]
profile = "black"

[flake8]
max-line-length = "88"
extend-ignore = "E203,E701"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
